# forecats

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  __init__.py  automation_fragment.yaml  dev_data_loader.py  docker-compose.yml  forecats.py  hacs.json  models.py  pyproject.toml  rest_command_fragment.yaml  script.py  services.yaml  templates.yaml  todo.txt
config_examples/: automation_fragment.yaml  forecats_blueprint.yaml  seeede1002.yaml
configurations/: automation_fragment.yaml
custom_components/forecats/: __init__.py  config_flow.py  const.py  forecats.py  image_processing.py  manifest.json  models.py  services.yaml  strings.json
custom_components/forecats/translations/: en.json
forecats/: forecats.py  logging.py  main.py  models.py
local_testing/: .env.example  test.py
local_testing/forecats_data/input_images/: prompt_history.txt
